# BattleTank

./: .gitignore  BattleTank.uproject  BattleTank.workspace  BattleTankCodeCompletionFolders.txt  BattleTankCodeLitePreProcessor.txt  CMakeLists.txt  README.md
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/: Battleground.umap  FlatLand.uasset  Landscape.uasset
Content/Assets/Fonts/: Grunge_Tank.uasset  Grunge_Tank_Font.uasset
Content/Battleground_sharedassets/: Dirt_LayerInfo.uasset  Dirt_LayerInfo_Flat.uasset  FlatLand.uasset  Grass_LayerInfo.uasset  Grass_LayerInfo_Flat.uasset  Snow_LayerInfo_Flat.uasset
Content/Blueprints/: BattleTankGameMode_BP.uasset  MainMenuUI_BP.uasset  TankPlayerController_BP.uasset
Content/Levels/: Battleground.umap  M_Ground_Grass.uasset  M_Ground_Gravel.uasset  MainMenu.umap  T_Smoke_Tiled_D.uasset
Content/Mortar/: M_Metal_Rust.uasset  Mortar_BP.uasset  mortar_barrel.uasset  mortar_body.uasset  mortar_dome.uasset
Content/Projectile/: ImpactBlast.uasset  LaunchBlast.uasset  M_Metal_Rust.uasset  Projectile_BP.uasset  Shape_Sphere.uasset
Content/StarterContent/Architecture/: Floor_400x400.uasset
Content/Tank/: HealthBar.uasset  Projectile_BP.uasset  TankAIController_BP.uasset  TankPlayerController_BP.uasset  Tank_BP.uasset  Track.uasset  tank_fbx_Barrel.uasset  tank_fbx_Body.uasset  tank_fbx_Track.uasset  tank_fbx_Turret.uasset
Content/UI/: MainMenuUI_BP.uasset  PlayerUI.uasset
Source/BattleTank/: TankPlayerController.cpp  TankPlayerController.h
Source/BattleTank/Private/: Projectile.cpp  Tank.cpp  (+7 more)
(+8 files in other folders)
